oauth2/oauth-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth-proxy
  name: oauth-proxy
  namespace: asm-oauth
spec:
  type: ClusterIP
  selector:
    app: oauth-proxy
  ports:
    - name: http-oauthproxy
      port: 4180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth-proxy
  name: oauth-proxy
  namespace: asm-oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "oauth-proxy"
  template:
    metadata:
      labels:
        app: oauth-proxy
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: istio-proxy
          image: auto
          resources:
            requests:
              cpu: 50m
              memory: 112Mi
          securityContext:
            allowPrivilegeEscalation: false
        - name: oauth-proxy
          image: "quay.io/oauth2-proxy/oauth2-proxy:v7.6.0"
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 4180
          args:
            - --provider=google
            - --upstream=static://200
            - --http-address=0.0.0.0:4180
            - --client-id=$(OAUTH_CLIENT_ID)
            - --client-secret=$(OAUTH_CLIENT_SECRET)
            - --cookie-secret=$(OAUTH_COOKIE_SECRET)
            - --email-domain=*
            - --cookie-refresh=1h
            - --cookie-expire=4h
            - --set-xauthrequest
            - --pass-access-token
            - --set-authorization-header
            - --skip-provider-button
            - --reverse-proxy
            - --whitelist-domain=.dev.infra-auth.alpha.phac.gc.ca
            - --cookie-domain=.dev.infra-auth.alpha.phac.gc.ca
            - --redirect-url=https://oauth.dev.infra-auth.alpha.phac.gc.ca/oauth2/callback
          resources:
            requests:
              cpu: 200m
              memory: 400Mi
